--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bawantha",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.6"
